#pragma once

class Aquamentus
{
private:
    /* data */
public:
    Aquamentus(/* args */) {}
    ~Aquamentus() {}
};