#pragma once
#include <string>

class Arco
{
private:
    int Lanzar();

    ~Arco() {}
};