#pragma once
#include <string>

class Bomba
{
private:
    int Golpear();

    ~Bomba() {}
};