#pragma once
#include <string>

class Boomerang
{
private:
    int Lanzar();

    ~Boomerang() {}
};