#pragma once
#include <string>

class Escudo
{
private:
    int Cubrir();

    ~Escudo() {}
};