#pragma once
#include <string>

class Espada
{
private:
    int Golpear();

    ~Espada() {}
};