#pragma once

class Ganon
{
private:
    /* data */
public:
    Ganon(/* args */) {}
    ~Ganon() {}
};