#pragma once

class Gibdos
{
private:
    /* data */
public:
    Gibdos(/* args */) {}
    ~Gibdos() {}
};