#pragma once

class Gleeok
{
private:
    /* data */
public:
    Gleeok(/* args */) {}
    ~Gleeok() {}
};