#pragma once

class Goriya
{
private:
    /* data */
public:
    Goriya(/* args */) {}
    ~Goriya() {}
};