#pragma once

class Goron
{
private:
    /* data */
public:
    Goron(/* args */) {}
    ~Goron() {}
};