#pragma once

class Herramienta
{
private:
    /* data */
public:
    Herramienta(/* args */) {}
    ~Herramienta() {}
};