#pragma once
#include <string>

class Jefe
{
    public:
    int Mover_izquierda();
    int Mover_derecha();
    int Mover_arriba();
    int Mover_abajo();
    int Atacar();

    ~Jefe(){}
};