#pragma once
#include <string>

class Keese
{
private:
    int Volar();

    ~Keese() {}
};