#pragma once
class Leever
{
private:
    /* data */
public:
    Leever(/* args */) {}
    ~Leever() {}
};