#pragma once

class Manhandla
{
private:
    /* data */
public:
    Manhandla(/* args */) {}
    ~Manhandla() {}
};