#pragma once

class Moblin
{
private:
    /* data */
public:
    Moblin(/* args */) {}
    ~Moblin() {}
};