#pragma once
#include <string>

class Pocion
{
public:
    int Curar();

    ~Pocion() {}
};
