#pragma once

class Pocion_azul
{
private:
    /* data */
public:
    Pocion_azul(/* args */) {}
    ~Pocion_azul() {}
};