#pragma once

class Pocion_roja
{
private:
    /* data */
public:
    Pocion_roja(/* args */) {}
    ~Pocion_roja() {}
};