#pragma once

class Trifuerza
{
private:
    /* data */
public:
    Trifuerza(/* args */) {}
    ~Trifuerza() {}
};