#pragma once

class Trifuerza_poder
{
private:
    /* data */
public:
    Trifuerza_poder(/* args */) {}
    ~Trifuerza_poder() {}
};