#pragma once

class Trifuerza_sabiduria
{
private:
    /* data */
public:
    Trifuerza_sabiduria(/* args */) {}
    ~Trifuerza_sabiduria() {}
};