#pragma once

class Trifuerza_valor
{
private:
    /* data */
public:
    Trifuerza_valor(/* args */) {}
    ~Trifuerza_valor() {}
};