#pragma once

class Zelda
{
private:
    /* data */
public:
    Zelda(/* args */) {}
    ~Zelda() {}
};